--- a/pancake/style.css
+++ b/pancake/style.css
@@ -18,16 +18,17 @@ body {
   }
 }
 
+
 .image-container {
   flex: 1;
   position: relative;
-  
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background: radial-gradient(transparent, #ff8a00);
 }
 
 .image-container img {
   width: 100%;
-  object-fit: cover;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1, 0.7);
   height: 100vh;
 
   @media only screen and (max-width: 600px) {
@@ -41,37 +42,64 @@ body {
   padding: 20px;
 }
 
-@keyframes price-banner-animation {
-  from {background-color: #d17b49; width: 75px; height: 75px; font-size: 40px;}
-  to {background-color: yellow; color: red; width: 50px; height: 50px; font-size: 20px;}
+.toppings-container {
+  background: #f9cd9b;
+}
+
+.extras-container {
+  background: #f9cd9b;
+}
+
+.delivery-container {
+  background: #f9cd9b;
+}
+
+#type {
+  border: 2px solid brown;
+  height: 30px;
+}
+
+h2, h3 {
+  color: brown;
+}
+
+input[type="checkbox"] {
+  accent-color: brown;
+}
+
+p {
+  color: #dc2e2e;
 }
 
 .price-banner {
   position: absolute;
   top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #d17b49;
+  left: 75%;
+  background-color: brown;
   color: white;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #userName input {
-  height: 40px
+  height: 40px;
+  border: 2px solid brown;
 }
 
 button {
   height: 40px;
   margin-left: 20px;
-  background: green;
+  background: #dc2e2e;
   border-radius: 5px;
+  color: white;
+  border: none;
+  padding: 0 10px;
 }
 
 .orderDetails {
