--- a/portfolio/gallery/gallery.css
+++ b/portfolio/gallery/gallery.css
@@ -21,16 +21,14 @@ body {
 }
 
 .one {
-    background-image: url(images/flower.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right; 
+    background-image: url(images/lightGreenLeaves.jpg);
+    
     grid-column: 1 / span 2;
     grid-row: 1/ span 4;
 }
 
 .two {
-    background-image: url(images/mountain.jpg);
+    background-image: url(images/autumnLeaves.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
@@ -38,7 +36,7 @@ body {
 }
 
 .three {
-    background-image: url(images/lotus.jpg);
+    background-image: url(images/leaves1.jpg);
     grid-column: 5 / span 2;
     grid-row: 1 / span 5;
 }
@@ -50,17 +48,17 @@ body {
 }
 
 .five {
-    background-image: url(images/girl.jpg);
+    background-image: url(images/greenLeaves.jpg);
     grid-row: 5;
 }
 
 .six {
-    background-image: url(images/dog.jpg);
+    background-image: url(images/multiLeaves.jpg);
     grid-row: 6;
 }
 
 .seven {
-    background-image: url(images/lotus.jpg);
+    background-image: url(images/autumnMultiLeaves.jpg);
     grid-row: 7;
 }
 
@@ -71,7 +69,8 @@ body {
 }
 
 .nine {
-    background-image: url(images/butterfly.jpg);
+    background-image: url(images/forestautum-leaves.jpg);
+  
     grid-column: 5 / span 2;
     grid-row: 6 / span 2;  
 }
