Add arrow image in back to top button

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -286,8 +286,12 @@ footer {
     position: fixed;
     right: 2rem;
     bottom: 2rem;
-    width: 100px;
-    height: 40px;
+    width: 55px;
+    height: 55px;
+}
+
+#backTop img {
+    padding: 3px;
 }
 
 .mobile-menu {
